<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username"
        android:textSize="18sp" />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/etUsername"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_your_username" />
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textSize="18sp" />
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/etPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password" />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnLogin"
        android:layout_marginTop="15dp"
        android:text="@string/button_login"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</LinearLayout>