<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivHotelImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="center"
        app:srcCompat="@drawable/no_image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins_bold"
        android:padding="12dp"
        android:text="@string/hotel_name"
        android:textColor="#001DB4"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tvHotelLocation"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:padding="0dp"
        android:text="@string/location_phnom_penh_cambodia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvHotelDescription"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:padding="0dp"
        android:text="@string/description_this_is_the_hotel_in_cambodia_we_hava_many_types_foods_drinks_and_also_gyms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvHotelTotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/_120k"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivView"
            app:layout_constraintEnd_toStartOf="@+id/ivView"
            app:layout_constraintTop_toTopOf="@+id/ivView" />

        <ImageView
            android:id="@+id/ivView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHotelTotalShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/_20k"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/share"
            app:layout_constraintBottom_toBottomOf="@+id/tvHotelTotalShare"
            app:layout_constraintStart_toEndOf="@+id/tvHotelTotalShare"
            app:layout_constraintTop_toTopOf="@+id/tvHotelTotalShare" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>